添加Dockerfile和VSCode设置，更新数据库连接配置，改进错误日志记录，以便写入docker管理

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -14,7 +14,6 @@ WRITE_TIMEOUT = 60
 TYPE = mysql
 USER = root
 PASSWORD = 1234
-#127.0.0.1:3306
-HOST = 127.0.0.1:3306
+HOST = mysql:3306
 NAME = blog
 TABLE_PREFIX = blog_
